// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreBar should not show if showScoreBar is false 1`] = `null`;

exports[`ScoreBar should not show if times is empty 1`] = `null`;

exports[`ScoreBar should show 1 column with Gold Badge 1`] = `
<div
  style={Object {}}
>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        4 minutes ago
      </span>
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        Badges
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "height": "300px",
        "width": "100%",
      }
    }
  >
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "300px",
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "height": "20.0%",
          }
        }
      >
        
      </span>
      <span
        style={
          Object {
            "backgroundColor": "#fbc02d",
            "height": "10%",
          }
        }
      >
        YOU⇾
      </span>
      <span
        style={
          Object {
            "height": "70.0%",
          }
        }
      >
        
      </span>
    </span>
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "300px",
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#fbc02d",
            "height": "33%",
          }
        }
      >
        Gold
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#9e9e9e",
            "height": "17%",
          }
        }
      >
        Silver
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#8d6e63",
            "height": "17%",
          }
        }
      >
        Bronze
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "33%",
          }
        }
      >
        Blue
      </div>
    </span>
  </div>
</div>
`;

exports[`ScoreBar should show 1 column with below Blue Badge 1`] = `
<div
  style={Object {}}
>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        4 minutes ago
      </span>
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        Badges
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "height": "95.0%",
          }
        }
      >
        
      </span>
      <span
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "10%",
          }
        }
      >
        YOU↓
      </span>
      <span
        style={
          Object {
            "height": "0.0%",
          }
        }
      >
        
      </span>
    </span>
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#fbc02d",
            "height": "25%",
          }
        }
      >
        Gold
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#9e9e9e",
            "height": "13%",
          }
        }
      >
        Silver
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#8d6e63",
            "height": "13%",
          }
        }
      >
        Bronze
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "50%",
          }
        }
      >
        Blue
      </div>
    </span>
  </div>
</div>
`;

exports[`ScoreBar should show 5 columns with mixed Badges 1`] = `
<div
  style={Object {}}
>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        4 minutes ago
      </span>
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        2 minutes ago
      </span>
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        a few seconds ago
      </span>
      <span
        style={
          Object {
            "flexGrow": "1",
          }
        }
      >
        Badges
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "1px solid black",
        "display": "flex",
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "height": "95.0%",
          }
        }
      >
        
      </span>
      <span
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "10%",
          }
        }
      >
        YOU↓
      </span>
      <span
        style={
          Object {
            "height": "0.0%",
          }
        }
      >
        
      </span>
    </span>
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "height": "95.0%",
          }
        }
      >
        
      </span>
      <span
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "10%",
          }
        }
      >
        YOU↓
      </span>
      <span
        style={
          Object {
            "height": "0.0%",
          }
        }
      >
        
      </span>
    </span>
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "height": "60.0%",
          }
        }
      >
        
      </span>
      <span
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "10%",
          }
        }
      >
        YOU⇾
      </span>
      <span
        style={
          Object {
            "height": "30.0%",
          }
        }
      >
        
      </span>
    </span>
    <span
      style={
        Object {
          "border": "1px solid black",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": "1",
          "fontSize": "large",
          "height": "400px",
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#fbc02d",
            "height": "25%",
          }
        }
      >
        Gold
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#9e9e9e",
            "height": "13%",
          }
        }
      >
        Silver
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#8d6e63",
            "height": "13%",
          }
        }
      >
        Bronze
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#81d4fa",
            "height": "50%",
          }
        }
      >
        Blue
      </div>
    </span>
  </div>
</div>
`;
